# bahi

./: .env.example  .gitignore  Makefile  README.md
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_ledger.py
server/evals/results/: report.md  sarvam-voice_audio_core_20260708_105437.json
server/evals/suites/: audio_core.yaml  core.yaml
server/src/bahi/: __init__.py  cli_voice.py  config.py  probes.py
server/src/bahi/api/: app.py  audio.py
server/src/bahi/core/: agent_loop.py  orchestrator.py  voice.py
server/src/bahi/core/prompts/: __init__.py
server/src/bahi/evals/: audio_synth.py  cost.py  metrics.py  report.py  run.py  runner.py  suite.py  wer.py
server/src/bahi/ledger/: db.py  models.py  repository.py
server/src/bahi/mcp_server/: __main__.py  schema.py  server.py  tools.py
server/src/bahi/providers/: _audio.py  _http.py  _openai_wire.py  base.py  factory.py  registry.py
server/src/bahi/providers/elevenlabs/: __init__.py  stt.py  tts.py
server/tests/fixtures/google/: gemini_25_flash_function_call.json
server/tests/fixtures/sarvam/: chat_105b_tool_call.json  chat_30b_tool_call.json  stt_saaras_v3_codemix.json  tts_bulbul_v3_response_meta.json
server/tests/integration/: test_agents_text.py  test_eval_runner.py  test_ledger_api.py  test_mcp_stdio.py  test_voice_api.py
server/tests/providers/: test_contract.py
server/tests/unit/: test_config.py  test_eval_metrics.py  test_fake_llm.py  test_health.py  test_no_network_imports.py  test_registry.py  test_repository.py  test_tools.py  test_wer.py
(+24 files in other folders)
